popup visibility issue fixed

--- a/src/components/backdrop/backdrop.css
+++ b/src/components/backdrop/backdrop.css
@@ -1,5 +1,6 @@
 .backdrop {
-  position: absolute;
+  position: fixed;
+  inset: 0;
   z-index: 19;
   top: 0;
   left: 0;
@@ -7,6 +8,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  height: 100vh;
   width: 100%;
 }
